--- a/src-agents/phase2/notebook_p2.ipynb
+++ b/src-agents/phase2/notebook_p2.ipynb
@@ -140,7 +140,6 @@
     "class QuestionType(str, Enum):\n",
     "    multiple_choice = \"multiple_choice\"\n",
     "    true_or_false = \"true_or_false\"\n",
-    "    popular_choice = \"popular_choice\"\n",
     "    estimation = \"estimation\"\n",
     "\n",
     "class Ask(BaseModel):\n",
@@ -373,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.1.-1"
   }
  },
  "nbformat": 4,
