--- a/src-agents/phase3/notebook_p3.ipynb
+++ b/src-agents/phase3/notebook_p3.ipynb
@@ -63,7 +63,6 @@
     "class QuestionType(str, Enum):\n",
     "    multiple_choice = \"multiple_choice\"\n",
     "    true_or_false = \"true_or_false\"\n",
-    "    popular_choice = \"popular_choice\"\n",
     "    estimation = \"estimation\"\n",
     "\n",
     "class Ask(BaseModel):\n",
@@ -91,21 +90,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pytz\n",
-    "from datetime import datetime\n",
+    "import requests\n",
     "\n",
-    "def get_current_time(location):\n",
+    "smoorghApi = \"http://localhost:5393\"\n",
+    "\n",
+    "def get_movie_rating(title):\n",
     "    try:\n",
-    "        # Get the timezone for the city\n",
-    "        timezone = pytz.timezone(location)\n",
+    "        response = requests.get(f\"{smoorghApi}/rating/{title}\")\n",
+    "        print('The api response for rating is:', response.text)\n",
+    "        return response.text\n",
     "\n",
-    "        # Get the current time in the timezone\n",
-    "        now = datetime.now(timezone)\n",
-    "        current_time = now.strftime(\"%I:%M:%S %p\")\n",
-    "\n",
-    "        return current_time\n",
     "    except:\n",
-    "        return \"Sorry, I couldn't find the timezone for that location.\""
+    "        return \"Sorry, I couldn't find a rating for that movie.\"\n",
+    "\n",
+    "def get_movie_year(title):\n",
+    "    try:\n",
+    "        response = requests.get(f\"{smoorghApi}/year/{title}\")\n",
+    "        print('The api response for year is:', response.text)\n",
+    "        return response.text\n",
+    "\n",
+    "    except:\n",
+    "        return \"Sorry, I couldn't find a year for that movie.\"\n",
+    "    \n",
+    "def get_movie_actor(title):\n",
+    "    try:\n",
+    "        response = requests.get(f\"{smoorghApi}/actor/{title}\")\n",
+    "        print('The api response for actor is:', response.text)\n",
+    "        return response.text\n",
+    "\n",
+    "    except:\n",
+    "        return \"Sorry, I couldn't find a actor for that movie.\"\n",
+    "    \n",
+    "def get_movie_location(title):\n",
+    "    try:\n",
+    "        response = requests.get(f\"{smoorghApi}/location/{title}\")\n",
+    "        print('The api response for location is:', response.text)\n",
+    "        return response.text\n",
+    "\n",
+    "    except:\n",
+    "        return \"Sorry, I couldn't find a actor for that movie.\"\n",
+    "\n",
+    "def get_movie_genre(title):\n",
+    "    try:\n",
+    "        response = requests.get(f\"{smoorghApi}/genre/{title}\")\n",
+    "        print('The api response for genre is:', response.text)\n",
+    "        return response.text\n",
+    "\n",
+    "    except:\n",
+    "        return \"Sorry, I couldn't find a actor for that movie.\"\n",
+    "\n",
+    "print(get_movie_rating(\"The Lost Planet\"))\n",
+    "\n",
+    "print(get_movie_year(\"The Lost Planet\"))\n",
+    "\n",
+    "print(get_movie_actor(\"The Lost Planet\"))\n",
+    "\n",
+    "print(get_movie_location(\"The Lost Planet\"))\n",
+    "\n",
+    "print(get_movie_genre(\"The Lost Planet\"))\n"
    ]
   },
   {
@@ -125,23 +167,41 @@
     "        {\n",
     "            \"type\": \"function\",\n",
     "            \"function\": {\n",
-    "                \"name\": \"get_current_time\",\n",
-    "                \"description\": \"Get the current time in a given location\",\n",
+    "                \"name\": \"get_movie_rating\",\n",
+    "                \"description\": \"Gets the rating of a movie\",\n",
     "                \"parameters\": {\n",
     "                    \"type\": \"object\",\n",
     "                    \"properties\": {\n",
-    "                        \"location\": {\n",
+    "                        \"title\": {\n",
     "                            \"type\": \"string\",\n",
-    "                            \"description\": \"The location name. The pytz is used to get the timezone for that location. Location names should be in a format like America/New_York, Asia/Bangkok, Europe/London\",\n",
+    "                            \"description\": \"The movie name. The movie name should be a string without quotation marks.\",\n",
     "                        }\n",
     "                    },\n",
-    "                    \"required\": [\"location\"],\n",
+    "                    \"required\": [\"title\"],\n",
+    "                },\n",
+    "            }\n",
+    "        },\n",
+    "         {\n",
+    "            \"type\": \"function\",\n",
+    "            \"function\": {\n",
+    "                \"name\": \"get_movie_location\",\n",
+    "                \"description\": \"Gets the location of a movie\",\n",
+    "                \"parameters\": {\n",
+    "                    \"type\": \"object\",\n",
+    "                    \"properties\": {\n",
+    "                        \"title\": {\n",
+    "                            \"type\": \"string\",\n",
+    "                            \"description\": \"The movie name. The movie name should be a string without quotation marks.\",\n",
+    "                        }\n",
+    "                    },\n",
+    "                    \"required\": [\"title\"],\n",
     "                },\n",
     "            }\n",
     "        }\n",
     "    ]   \n",
     "available_functions = {\n",
-    "            \"get_current_time\": get_current_time          \n",
+    "            \"get_movie_rating\": get_movie_rating,\n",
+    "            \"get_movie_location\": get_movie_location        \n",
     "        } "
    ]
   },
@@ -168,7 +228,7 @@
     "    \n",
     "    question = ask.question\n",
     "    messages= [{\"role\" : \"assistant\", \"content\" : question}\n",
-    "               , { \"role\" : \"system\", \"content\" : \"if asked for time answer in the format HH:MM:SS AM/PM only. Do not answer with a full sentence.\"}\n",
+    "               , { \"role\" : \"system\", \"content\" : \"Answer the question of the user and use the tools available to you\"}\n",
     "               ]\n",
     "    first_response = client.chat.completions.create(\n",
     "        model = deployment_name,\n",
@@ -239,7 +299,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "ask = Ask(question=\"What time is it in New York?\", type=QuestionType.estimation)\n",
+    "ask = Ask(question=\"Which country does 'The Crystal of Power' take place in??\", type=QuestionType.estimation)\n",
     "answer = await ask_question(ask)\n",
     "print('Answer:', answer )\n"
    ]
@@ -272,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
