--- a/src-agents/phase3/notebook_p3.ipynb
+++ b/src-agents/phase3/notebook_p3.ipynb
@@ -92,14 +92,14 @@
    "source": [
     "import requests\n",
     "\n",
-    "smoorghApi = \"http://localhost:5393\"\n",
+    "smoorghApi = \"https://.northeurope.azurecontainerapps.io/\"\n",
     "\n",
     "def get_movie_rating(title):\n",
     "    try:\n",
     "        response = requests.get(f\"{smoorghApi}/rating/{title}\")\n",
     "        print('The api response for rating is:', response.text)\n",
     "        return response.text\n",
-    "\n",
+    "    \n",
     "    except:\n",
     "        return \"Sorry, I couldn't find a rating for that movie.\"\n",
     "\n",
@@ -119,7 +119,7 @@
     "        return response.text\n",
     "\n",
     "    except:\n",
-    "        return \"Sorry, I couldn't find a actor for that movie.\"\n",
+    "        return \"Sorry, I couldn't find an actor for that movie.\"\n",
     "    \n",
     "def get_movie_location(title):\n",
     "    try:\n",
@@ -128,7 +128,7 @@
     "        return response.text\n",
     "\n",
     "    except:\n",
-    "        return \"Sorry, I couldn't find a actor for that movie.\"\n",
+    "        return \"Sorry, I couldn't find a location for that movie.\"\n",
     "\n",
     "def get_movie_genre(title):\n",
     "    try:\n",
@@ -137,7 +137,7 @@
     "        return response.text\n",
     "\n",
     "    except:\n",
-    "        return \"Sorry, I couldn't find a actor for that movie.\"\n",
+    "        return \"Sorry, I couldn't find a genre for that movie.\"\n",
     "\n",
     "print(get_movie_rating(\"The Lost Planet\"))\n",
     "\n",
@@ -228,7 +228,7 @@
     "    \n",
     "    question = ask.question\n",
     "    messages= [{\"role\" : \"assistant\", \"content\" : question}\n",
-    "               , { \"role\" : \"system\", \"content\" : \"Answer the question of the user and use the tools available to you\"}\n",
+    "               , { \"role\" : \"system\", \"content\" : \"Answer the question of the user and use the tools available to you.\"}\n",
     "               ]\n",
     "    first_response = client.chat.completions.create(\n",
     "        model = deployment_name,\n",
@@ -299,7 +299,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "ask = Ask(question=\"Which country does 'The Crystal of Power' take place in??\", type=QuestionType.estimation)\n",
+    "ask = Ask(question=\"Which country does 'The Lost Planet' take place in?\", type=QuestionType.estimation)\n",
     "answer = await ask_question(ask)\n",
     "print('Answer:', answer )\n"
    ]
