--- a/src-agents/phase2/notebook_p2.ipynb
+++ b/src-agents/phase2/notebook_p2.ipynb
@@ -159,7 +159,7 @@
    "metadata": {},
    "source": [
     "## Load custom data\n",
-    "Here's how you load custom data into an embedding model and how you use langchain to query it.\n"
+    "Here's how you load custom vector data by means of an embedding model and then query it.\n"
    ]
   },
   {
@@ -170,15 +170,18 @@
    "source": [
     "import os\n",
     "import json\n",
-    "from langchain_openai import AzureOpenAIEmbeddings\n",
+    "from openai import AzureOpenAI\n",
     "from azure.search.documents import SearchClient\n",
     "\n",
+    "client = AzureOpenAI(\n",
+    "        api_key = os.getenv(\"AZURE_OPENAI_API_KEY\"),  \n",
+    "        api_version = os.getenv(\"AZURE_OPENAI_VERSION\"),\n",
+    "        azure_endpoint = os.getenv(\"AZURE_OPENAI_ENDPOINT\")\n",
+    "    )\n",
+    "\n",
     "# use an embeddingsmodel to create embeddings\n",
-    "embeddings_model = AzureOpenAIEmbeddings(    \n",
-    "    azure_deployment = os.getenv(\"AZURE_OPENAI_EMBEDDING_DEPLOYMENT_NAME\"),\n",
-    "    openai_api_version = os.getenv(\"OPENAI_EMBEDDING_API_VERSION\"),\n",
-    "    model= os.getenv(\"AZURE_OPENAI_EMBEDDING_MODEL\")\n",
-    ")\n",
+    "def get_embedding(text, model=os.getenv(\"AZURE_OPENAI_EMBEDDING_MODEL\")):\n",
+    "    return client.embeddings.create(input = [text], model=model).data[0].embedding\n",
     "\n",
     "# 1. define function to parse csv row and create embedding for overview text\n",
     "def parseMovie(movie):\n",
@@ -190,7 +193,7 @@
     "        (\"year\", str(movie[\"movie_year\"])),\n",
     "        (\"rating\", str(movie[\"movie_rating\"])),\n",
     "        (\"plot\", movie[\"movie_plot\"]),\n",
-    "        (\"vector\", embeddings_model.embed_query(movie[\"movie_plot\"]))\n",
+    "        (\"vector\", get_embedding(movie[\"movie_plot\"]))\n",
     "    ])\n",
     "\n",
     "# 2. load movies from csv\n",
@@ -254,7 +257,7 @@
     "question = \"Tell me about the latest Ant Man movie. When was it released?\"\n",
     "\n",
     "# create a vectorized query based on the question\n",
-    "vector = VectorizedQuery(vector=embeddings_model.embed_query(question), k_nearest_neighbors=5, fields=\"vector\")\n",
+    "vector = VectorizedQuery(vector=get_embedding(question), k_nearest_neighbors=5, fields=\"vector\")\n",
     "\n",
     "\n",
     "# create search client to retrieve movies from the vector store\n",
@@ -318,11 +321,15 @@
     "    \"\"\"\n",
     "    Ask a question\n",
     "    \"\"\"\n",
-    "    #####\n",
-    "    # implement rag flow here\n",
-    "    ######\n",
     "    \n",
-    "    print(answer)\n",
+    "    answer = \"I dont know\"\n",
+    "\n",
+    "    #####\\n\",\n",
+    "    # implement rag flow here\\n\",\n",
+    "    ######\\n\",\n",
+    "   \n",
+    "    \n",
+    "    print('Answer:', answer)\n",
     "    return answer"
    ]
   },
@@ -340,9 +347,9 @@
    "outputs": [],
    "source": [
     "\n",
-    "ask = Ask(question=\"Tell me about the latest Ant Man movie. When was it released? \", type=QuestionType.estimation)\n",
+    "ask = Ask(question=\"How many actors were featured in The Smonger Games?\", type=QuestionType.estimation)\n",
     "answer = await ask_question(ask)\n",
-    "print('Answer:', answer)\n"
+    "print('Answer:', answer)"
    ]
   },
   {
@@ -372,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
