--- a/src-agents/phase1/notebook_p1.ipynb
+++ b/src-agents/phase1/notebook_p1.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Phase 1 - Setting everything up\n",
+    "\n",
+    "Open this repository in a GitHub Codespace.\n",
     "If not already done run this in the top level folder:\n",
+    "\n",
     "```\n",
     "pip install -r requirements.txt\n",
     "```\n",
