Adjusted api definition

--- a/src-agents/phase3/notebook_p3.ipynb
+++ b/src-agents/phase3/notebook_p3.ipynb
@@ -92,12 +92,12 @@
    "source": [
     "import requests\n",
     "\n",
-    "smoorghApi = \"http://localhost:5393\"\n",
+    "smoorghApi = \"https://.northeurope.azurecontainerapps.io/\"\n",
     "\n",
     "def get_movie_rating(title):\n",
     "    try:\n",
     "        headers = {\"title\": title}\n",
-    "        response = requests.get(f\"{smoorghApi}/rating\", headers=headers)\n",
+    "        response = requests.get(f\"{smoorghApi}rating\", headers=headers)\n",
     "        print('The api response for rating is:', response.text)\n",
     "        return response.text\n",
     "\n",
@@ -107,7 +107,7 @@
     "def get_movie_year(title):\n",
     "    try:\n",
     "        headers = {\"title\": title}\n",
-    "        response = requests.get(f\"{smoorghApi}/year\", headers=headers)\n",
+    "        response = requests.get(f\"{smoorghApi}year\", headers=headers)\n",
     "        print('The api response for year is:', response.text)\n",
     "        return response.text\n",
     "\n",
@@ -117,7 +117,7 @@
     "def get_movie_actor(title):\n",
     "    try:\n",
     "        headers = {\"title\": title}\n",
-    "        response = requests.get(f\"{smoorghApi}/actor\", headers=headers)\n",
+    "        response = requests.get(f\"{smoorghApi}actor\", headers=headers)\n",
     "        print('The api response for actor is:', response.text)\n",
     "        return response.text\n",
     "\n",
@@ -127,7 +127,7 @@
     "def get_movie_location(title):\n",
     "    try:\n",
     "        headers = {\"title\": title}\n",
-    "        response = requests.get(f\"{smoorghApi}/location\", headers=headers)\n",
+    "        response = requests.get(f\"{smoorghApi}location\", headers=headers)\n",
     "        print('The api response for location is:', response.text)\n",
     "        return response.text\n",
     "\n",
@@ -137,7 +137,7 @@
     "def get_movie_genre(title):\n",
     "    try:\n",
     "        headers = {\"title\": title}\n",
-    "        response = requests.get(f\"{smoorghApi}/genre\", headers=headers)\n",
+    "        response = requests.get(f\"{smoorghApi}genre\", headers=headers)\n",
     "        print('The api response for genre is:', response.text)\n",
     "        return response.text\n",
     "\n",
@@ -339,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.1.undefined"
   }
  },
  "nbformat": 4,
