--- a/src-agents/phase5/notebook_p5.ipynb
+++ b/src-agents/phase5/notebook_p5.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Phase 4 - Efficiency\n",
+    "# Phase 5 - Content Safety\n",
     "If not already done run this in the top level folder:\n",
     "```\n",
     "pip install -r requirements.txt\n",
@@ -82,32 +82,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get the number of tokens\n",
-    "tiktoken is a library which allows you to get the number of tokens. \n",
-    "Ensure you pick the correct encoding for your model based on this list. https://github.com/openai/tiktoken/blob/c0ba74c238d18b4824c25f3c27fc8698055b9a76/tiktoken/model.py#L20\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_num_tokens_from_string(string: str, encoding_name: str='p50k_base') -> int:\n",
-    "    \"\"\"Returns the number of tokens in a text by a given encoding.\"\"\"\n",
-    "    encoding = tiktoken.get_encoding(encoding_name)\n",
-    "    return len(encoding.encode(string))\n",
-    "\n",
-    "number_of_tokens=get_num_tokens_from_string(\"Hello, Azure AI Adventure Day!\")\n",
-    "print(f\"Number of tokens in the string: {number_of_tokens}\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# YOUR Mission: \n",
-    "Ensure the answers provided are correct and you don't return info you shouldn't return.\n"
+    "Ensure you answer questions always polite and never insult the Smorghs. \n"
    ]
   },
   {
