added hint to readme

--- a/src-agents/phase1/notebook_p1.ipynb
+++ b/src-agents/phase1/notebook_p1.ipynb
@@ -7,7 +7,9 @@
     "# Phase 1 - Setting everything up\n",
     "\n",
     "Open this repository in a GitHub Codespace.\n",
-    "If not already done run this in the top level folder:\n",
+    "Before you start with anything else, make sure you setup the infrastructure required. Follow the readme file in the root folder to do this!\n",
+    "\n",
+    "To start with Phase 1, if not already done run this in the top level folder:\n",
     "\n",
     "```\n",
     "pip install -r requirements.txt\n",
