added 3 sample questions

--- a/src-agents/phase1/notebook_p1.ipynb
+++ b/src-agents/phase1/notebook_p1.ipynb
@@ -165,6 +165,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Sample Questions\n",
+    "Sample Questions could look like this. Make sure your answer exactly  matches the required answer.\n",
+    "\n",
+    "{\n",
+    "    \"id\": 3,\n",
+    "    \"phase\": 1,\n",
+    "    \"question\": \"Which movie features a plot where a young girl named Dorothy is transported to a magical land via a tornado? 1) Cinderella 2) The Wizard of Oz 3) Alice in Wonderland 4) The Little Mermaid\",\n",
+    "    \"answer\": \"The Wizard of Oz\",\n",
+    "    \"type\": \"multiple_choice\"\n",
+    "},\n",
+    "{\n",
+    "    \"id\": 4,\n",
+    "    \"phase\": 1,\n",
+    "    \"question\": \"Is Yoda a character from the Star Trek universe: True or False?\",\n",
+    "    \"answer\": false,\n",
+    "    \"type\": \"true_or_false\"\n",
+    "},\n",
+    "{\n",
+    "    \"id\": 5,\n",
+    "    \"phase\": 1,\n",
+    "    \"question\": \"How many movies are there in 'The Lord of the Rings' trilogy directed by Peter Jackson?\",\n",
+    "    \"answer\": 3,\n",
+    "    \"type\": \"estimation\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Make sure you transfer your code changes into main.py (or additional files). Then redeploy your container using this command.\n",
     "```\n",
     "bash ./azd-hooks/deploy.sh phase1 $AZURE_ENV_NAME\n",
