added 3 sample questions

--- a/src-agents/phase1/notebook_p1.ipynb
+++ b/src-agents/phase1/notebook_p1.ipynb
@@ -166,7 +166,14 @@
    "metadata": {},
    "source": [
     "# Sample Questions\n",
-    "Sample Questions could look like this. Make sure your answer exactly  matches the required answer.\n",
+    "Sample Questions could look like this. Make sure your answer exactly  matches the required answer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "\n",
     "{\n",
     "    \"id\": 3,\n",
