added system prompt to sample to make start simpler

--- a/src-agents/phase1/notebook_p1.ipynb
+++ b/src-agents/phase1/notebook_p1.ipynb
@@ -120,16 +120,19 @@
    "source": [
     "\n",
     "async def ask_question(ask: Ask):\n",
-    "    \"\"\"\n",
-    "    Ask a question\n",
-    "    \"\"\"\n",
+    "    # \"\"\"\n",
+    "    # # Ask a question\n",
+    "    # \"\"\"\n",
     "\n",
     "    # Send a completion call to generate an answer\n",
     "    print('Sending a request to openai')\n",
-    "    start_phrase = ask.question\n",
+    "    \n",
+    "    start_phrase =  ask.question\n",
+    "    \n",
     "    response = client.chat.completions.create(\n",
     "        model = deployment_name,\n",
-    "        messages = [{\"role\" : \"assistant\", \"content\" : start_phrase}],\n",
+    "        messages = [{\"role\" : \"assistant\", \"content\" : start_phrase}, \n",
+    "                     { \"role\" : \"system\", \"content\" : \"Answer this question:\"}]\n",
     "    )\n",
     "\n",
     "    print(response.choices[0].message.content)\n",
