intro section for nb3

--- a/src-agents/phase3/notebook_p3.ipynb
+++ b/src-agents/phase3/notebook_p3.ipynb
@@ -5,6 +5,12 @@
    "metadata": {},
    "source": [
     "# Phase 3 - Function Calling\n",
+    "\n",
+    "## About this phase\n",
+    "In this challenge you have to make sure, that your API is able to answer questions, that neither the model knows, nor are the answers hidden in your custom data. But you can make your model aware of a bunch of APIs that can be used to call the APIs. \n",
+    "So go, make the model aware of the APIs and build an application that call the APIs whenever required!\n",
+    "\n",
+    "\n",
     "If not already done run this in the top level folder:\n",
     "```\n",
     "pip install -r requirements.txt\n",
