intro section for p2

--- a/src-agents/phase2/notebook_p2.ipynb
+++ b/src-agents/phase2/notebook_p2.ipynb
@@ -6,7 +6,13 @@
    "source": [
     "# Phase2 - RAG\n",
     "\n",
+    "\n",
+    "## About this phase\n",
+    "In this phase you bring in custom data about smorg movies and make your model aware of it using RAG. You store your custom data in an Azure AI Search database, and vectorize the query coming in to find useful results in your custom data using vector search.\n",
+    "\n",
+    "\n",
     "If not already done run this in the top level folder:\n",
+    "\n",
     "```\n",
     "pip install -r requirements.txt\n",
     "```\n",
