--- a/src-agents/phase4/notebook_p4.ipynb
+++ b/src-agents/phase4/notebook_p4.ipynb
@@ -15,17 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found Azure OpenAI API Base Endpoint: https://cog-fkplarx5db7we.openai.azure.com/\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import tiktoken\n",
@@ -62,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,17 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of tokens in the string: 7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_num_tokens_from_string(string: str, encoding_name: str='p50k_base') -> int:\n",
     "    \"\"\"Returns the number of tokens in a text by a given encoding.\"\"\"\n",
@@ -130,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,24 +157,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sending a request to openai\n",
-      "Number of tokens in the input: 17\n",
-      "Number of tokens in the output: 3\n",
-      "Total Tokens Used: 20\n",
-      "Answer: answer='c. Green' correlationToken=None promptTokensUsed=24 completionTokensUsed=3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
-    "ask = Ask(question=\"Which of the following is a color? a. Tree b. Flower c. Green\", type=QuestionType.multiple_choice)\n",
+    "ask = Ask(question=\"Who brings the character of Tony Stark to life in the Marvel Cinematic Universe? Robert Downey Jr., Chris Hemsworth, Chris Evans, Mark Ruffalo\", type=QuestionType.multiple_choice)\n",
+    "answer = await ask_question(ask)\n",
+    "print('Answer:', answer)\n",
+    "\n",
+    "ask = Ask(question=\"In the Marvel Cinematic Universe, who is the actor that brings Tony Stark to life? Robert Downey Jr., Chris Hemsworth, Chris Evans, Mark Ruffalo\", type=QuestionType.multiple_choice)\n",
+    "answer = await ask_question(ask)\n",
+    "print('Answer:', answer)\n",
+    "\n",
+    "ask = Ask(question=\"Which actor plays Tony Stark in the Marvel movies? Robert Downey Jr., Chris Hemsworth, Chris Evans, Mark Ruffalo\", type=QuestionType.multiple_choice)\n",
     "answer = await ask_question(ask)\n",
     "print('Answer:', answer)"
    ]
