added hint for uvicorn

--- a/src-agents/phase1/notebook_p1.ipynb
+++ b/src-agents/phase1/notebook_p1.ipynb
@@ -205,7 +205,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make sure you transfer your code changes into main.py (or additional files). Then redeploy your container using this command.\n",
+    "Make sure you transfer your code changes into main.py (or additional files). \n",
+    "You can test your app locally using uvicorn. (See Readme.md for details.)\n",
+    "\n",
+    "Then redeploy your container using this command.\n",
     "```\n",
     "bash ./azd-hooks/deploy.sh phase1 $AZURE_ENV_NAME\n",
     "```\n"
