changed movie title to a title that can be found

--- a/src-agents/phase3/notebook_p3.ipynb
+++ b/src-agents/phase3/notebook_p3.ipynb
@@ -305,7 +305,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "ask = Ask(question=\"Which country does 'The Lost Planet' take place in?\", type=QuestionType.estimation)\n",
+    "ask = Ask(question=\"Which country does 'Hobbiton: The Heist of the Silver Dragon' take place in?\", type=QuestionType.estimation)\n",
     "answer = await ask_question(ask)\n",
     "print('Answer:', answer )\n"
    ]
