--- a/src-agents/phase4/notebook_p4.ipynb
+++ b/src-agents/phase4/notebook_p4.ipynb
@@ -5,6 +5,15 @@
    "metadata": {},
    "source": [
     "# Phase 4 - Efficiency\n",
+    "\n",
+    "This lab is about making sure you use less tokens - because tokens is the \"currency\" for AI requests and we want to save money! \n",
+    "The way we tackle it in this lab is by caching questions and answers - so you don't need to ask your LLM all the time. To make this a little more sophisticated we are generating vectors for the questions - and therefore cache the semantics of the questions, not just the string.\n",
+    "\n",
+    "Below you will find a sample how to do this.\n",
+    "It's your job to build this caching into your api so you can reduce the number of tokens used. Are there other optimizations you could think of?\n",
+    "\n",
+    "\n",
+    "\n",
     "If not already done run this in the top level folder:\n",
     "```\n",
     "pip install -r requirements.txt\n",
@@ -15,17 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found Azure OpenAI API Base Endpoint: https://cog-fkplarx5db7we.openai.azure.com/\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import tiktoken\n",
@@ -92,23 +93,15 @@
    "metadata": {},
    "source": [
     "## Get the number of tokens\n",
-    "tiktoken is a library which allows you to get the number of tokens. \n",
+    "tiktoken is a library which allows you to get the number of tokens. This will allow you to check how much tokens you've been using.\n",
     "Ensure you pick the correct encoding for your model based on this list. https://github.com/openai/tiktoken/blob/c0ba74c238d18b4824c25f3c27fc8698055b9a76/tiktoken/model.py#L20\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of tokens in the string: 7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_num_tokens_from_string(string: str, encoding_name: str='p50k_base') -> int:\n",
     "    \"\"\"Returns the number of tokens in a text by a given encoding.\"\"\"\n",
@@ -123,9 +116,270 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Use AI Search for semantic caching\n",
+    "The snippets below show you how we cache the semantic meaning of questions into Azure AI Search."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use an embeddingsmodel to create embeddings\n",
+    "def get_embedding(text, model=os.getenv(\"AZURE_OPENAI_EMBEDDING_MODEL\")):\n",
+    "    return client.embeddings.create(input = [text], model=model).data[0].embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from azure.identity import DefaultAzureCredential\n",
+    "from azure.core.credentials import AzureKeyCredential\n",
+    "\n",
+    "from azure.search.documents.indexes import SearchIndexClient\n",
+    "from azure.search.documents.indexes.models import (\n",
+    "    SimpleField,\n",
+    "    SearchFieldDataType,\n",
+    "    SearchableField,\n",
+    "    SearchField,\n",
+    "    VectorSearch,\n",
+    "    HnswAlgorithmConfiguration,\n",
+    "    VectorSearchProfile,\n",
+    "    SemanticConfiguration,\n",
+    "    SemanticPrioritizedFields,\n",
+    "    SemanticField,\n",
+    "    SemanticSearch,\n",
+    "    SearchIndex\n",
+    "\n",
+    ")\n",
+    "\n",
+    "credential = AzureKeyCredential(os.environ[\"AZURE_AI_SEARCH_KEY\"]) if len(os.environ[\"AZURE_AI_SEARCH_KEY\"]) > 0 else DefaultAzureCredential()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We create a new index to store questions and answers - and the vector which represents the semantic of it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "index_name = \"question-semantic-index\"\n",
+    "\n",
+    "index_client = SearchIndexClient(\n",
+    "    endpoint=os.environ[\"AZURE_AI_SEARCH_ENDPOINT\"], \n",
+    "    credential=credential\n",
+    ")\n",
+    "\n",
+    "# Create a search index with the fields and a vector field which we will fill with a vector based on the overview field\n",
+    "fields = [\n",
+    "    SimpleField(name=\"id\", type=SearchFieldDataType.String, key=True, sortable=True, filterable=True, facetable=True),\n",
+    "    SearchableField(name=\"question\", type=SearchFieldDataType.String),\n",
+    "    SearchableField(name=\"answer\", type=SearchFieldDataType.String),\n",
+    "    SearchField(name=\"vector\", type=SearchFieldDataType.Collection(SearchFieldDataType.Single),\n",
+    "                searchable=True, vector_search_dimensions=1536, vector_search_profile_name=\"myHnswProfile\"),\n",
+    "]\n",
+    "\n",
+    "# Configure the vector search configuration  \n",
+    "vector_search = VectorSearch(\n",
+    "    algorithms=[\n",
+    "        HnswAlgorithmConfiguration(\n",
+    "            name=\"myHnsw\"\n",
+    "        )\n",
+    "    ],\n",
+    "    profiles=[\n",
+    "        VectorSearchProfile(\n",
+    "            name=\"myHnswProfile\",\n",
+    "            algorithm_configuration_name=\"myHnsw\",\n",
+    "        )\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Configure the semantic search configuration \n",
+    "semantic_config = SemanticConfiguration(\n",
+    "    name=\"question-semantic-config\",\n",
+    "    prioritized_fields=SemanticPrioritizedFields(\n",
+    "        title_field=SemanticField(field_name=\"question\"),\n",
+    "        keywords_fields=[SemanticField(field_name=\"answer\")],\n",
+    "        content_fields=[SemanticField(field_name=\"question\")]\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "# Create the semantic settings with the configuration\n",
+    "semantic_search = SemanticSearch(configurations=[semantic_config])\n",
+    "\n",
+    "# Create the search index with the semantic settings\n",
+    "index = SearchIndex(name=index_name, fields=fields,\n",
+    "                    vector_search=vector_search, semantic_search=semantic_search)\n",
+    "result = index_client.create_or_update_index(index)\n",
+    "print(f' {result.name} created')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's import some test data. As you see below the test data set contains 3 questions - all asking for the same with different words. So the semantics are the same, but it's not a word by word match. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "questions = [{\n",
+    "        \"question\": \"Which actor plays Tony Stark in the Marvel movies?\",\n",
+    "        \"answer\": \"Robert Downey Jr.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"In the Marvel Cinematic Universe, who is the actor that brings Tony Stark to life?\",\n",
+    "        \"answer\": \"Robert Downey Jr.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"Who brings the character of Tony Stark to life in the Marvel Cinematic Universe?\",\n",
+    "        \"answer\": \"Robert Downey Jr.\"\n",
+    "    }]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For testing purposes, we put those questions into the index. To do this, we create a vector for all questions which represent the meaning of the question."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generate embedding for the question\n",
+    "index = 1\n",
+    "for question in questions:\n",
+    "    question[\"id\"] = str(index)\n",
+    "    question[\"vector\"] = get_embedding(question[\"question\"])\n",
+    "    index = index + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's put all those questions into our new index of Azure AI Search."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from azure.search.documents import SearchClient\n",
+    "\n",
+    "# create new searchclient using our new index for the questions\n",
+    "search_client = SearchClient(\n",
+    "    endpoint=os.environ[\"AZURE_AI_SEARCH_ENDPOINT\"], \n",
+    "    index_name=index_name,\n",
+    "    credential=credential\n",
+    ")\n",
+    "\n",
+    "# upload question to vector store\n",
+    "result = search_client.upload_documents(questions)\n",
+    "print(f\"Successfully loaded {len(questions)} questions into Azure AI Search index.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's give it a try - ask the same question again - this time with yet another sentence but with the same semantic meaning."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "question = \"Who is Tony Stark in the MCU?\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we don't just ask the LLM - instead we generate an embedding and search for the vector in our new index - and get the top 5 questions and answers and print them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from azure.search.documents.models import (\n",
+    "    VectorizedQuery\n",
+    ")\n",
+    "\n",
+    "# create a vectorized query based on the question\n",
+    "vector = VectorizedQuery(vector=get_embedding(question), k_nearest_neighbors=5, fields=\"vector\")\n",
+    "\n",
+    "# create search client to retrieve movies from the vector store\n",
+    "found_questions = list(search_client.search(\n",
+    "    search_text=None,\n",
+    "    query_type=\"semantic\",\n",
+    "    semantic_configuration_name=\"question-semantic-config\",\n",
+    "    vector_queries=[vector],\n",
+    "    select=[\"question\", \"answer\"],\n",
+    "    top=5\n",
+    "))\n",
+    "\n",
+    "# print the found documents and the field that were selected\n",
+    "for result in found_questions:\n",
+    "    print(\"Question: {}\".format(result[\"question\"]))\n",
+    "    print(\"Answer: {}\".format(result[\"answer\"]))\n",
+    "    print(\"----------\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you have seen, we can get the correct answer for a question that was never asked the same way before, if we manage to cache questions and answers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# YOUR Mission: \n",
     "Adjust the function below and reuse it in the main.py file later to deploy to Azure and to update your service. \n",
-    "Ensure the answers provided are correct and in the correct format.\n"
+    "Ensure the answers provided are correct and in the correct format.\n",
+    "\n",
+    "- for incomingn questions, create a vector embedding\n",
+    "- check if the answer is in the cache before \n",
+    "- if yes, \n",
+    "    - return the answer\n",
+    "    - put the new question & answer in the cache as well\n",
+    "- if no, \n",
+    "    - reach out to the llm to get the answer. \n",
+    "    - Then put the question & answer in the cache in case a similar question will come up again\n",
+    "- measure the tokens used \n",
+    "\n"
    ]
   },
   {
@@ -173,21 +427,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sending a request to openai\n",
-      "Number of tokens in the input: 17\n",
-      "Number of tokens in the output: 3\n",
-      "Total Tokens Used: 20\n",
-      "Answer: answer='c. Green' correlationToken=None promptTokensUsed=24 completionTokensUsed=3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "ask = Ask(question=\"Which of the following is a color? a. Tree b. Flower c. Green\", type=QuestionType.multiple_choice)\n",
