added wireframe for ask method

--- a/src-agents/phase4/notebook_p4.ipynb
+++ b/src-agents/phase4/notebook_p4.ipynb
@@ -388,34 +388,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from azure.search.documents.models import (\n",
+    "    VectorizedQuery\n",
+    ")\n",
+    "from azure.search.documents import SearchClient\n",
+    "from azure.core.credentials import AzureKeyCredential\n",
+    "\n",
+    "credential = AzureKeyCredential(os.environ[\"AZURE_AI_SEARCH_KEY\"]) if len(os.environ[\"AZURE_AI_SEARCH_KEY\"]) > 0 else DefaultAzureCredential()\n",
+    "\n",
     "async def ask_question(ask: Ask):\n",
     "    \"\"\"\n",
     "    Ask a question\n",
-    "    \"\"\"\n",
+    "    \"\"\"   \n",
+    "    print (ask.question)\n",
+    "    index_name = \"question-semantic-index\"\n",
     "\n",
-    "    # Send a completion call to generate an answer\n",
-    "    print('Sending a request to openai')\n",
-    "    start_phrase = ask.question\n",
-    "    messages=  [{\"role\" : \"assistant\", \"content\" : start_phrase}]\n",
-    "    number_of_tokens_in= get_num_tokens_from_string(messages[0]['content']);\n",
-    "    \n",
-    "    response = client.chat.completions.create(\n",
-    "        model = deployment_name,\n",
-    "        messages =messages,\n",
+    "    # create new searchclient using our new index for the questions\n",
+    "    search_client = SearchClient(\n",
+    "        endpoint=os.environ[\"AZURE_AI_SEARCH_ENDPOINT\"], \n",
+    "        index_name=index_name,\n",
+    "        credential=credential\n",
     "    )\n",
     "\n",
-    "    number_of_tokens_out= get_num_tokens_from_string(response.choices[0].message.content);\n",
+    "    \n",
+    "    # check if the question &  answer is in the cache already\n",
+    "    # TODO    \n",
+    "    \n",
     "\n",
-    "    print(f\"Number of tokens in the input: {number_of_tokens_in}\")\n",
-    "    print(f\"Number of tokens in the output: {number_of_tokens_out}\")\n",
-    "    print('Total Tokens Used: ' + str(number_of_tokens_in + number_of_tokens_out))\n",
+    "    if(questionMatchCount>0):\n",
+    "        print (\"Found a match in the cache.\")\n",
+    "        # put the new question & answer in the cache as well\n",
+    "        # TODO  \n",
     "\n",
-    "    answer = Answer(answer=response.choices[0].message.content)\n",
-    "    answer.correlationToken = ask.correlationToken\n",
-    "    answer.promptTokensUsed = response.usage.prompt_tokens\n",
-    "    answer.completionTokensUsed = response.usage.completion_tokens\n",
+    "        # return the answer        \n",
+    "        # TODO        \n",
+    "    \n",
+    "    else:\n",
+    "        print(\"No match found in the cache.\")        \n",
+    "        \n",
+    "        #   reach out to the llm to get the answer. \n",
+    "        print('Sending a request to LLM')\n",
+    "        start_phrase = ask.question\n",
+    "        messages=  [{\"role\" : \"assistant\", \"content\" : start_phrase},\n",
+    "                     { \"role\" : \"system\", \"content\" : \"Answer this question with a very short answer. Don't answer with a full sentence, and do not format the answer.\"}]\n",
+    "        \n",
+    "        response = client.chat.completions.create(\n",
+    "             model = deployment_name,\n",
+    "             messages =messages,\n",
+    "        )\n",
+    "        answer = Answer(answer=response.choices[0].message.content)\n",
     "\n",
-    "    return answer"
+    "        #  put the new question & answer in the cache as wel\n",
+    "        docIdCount = search_client.get_document_count()  +1 \n",
+    "        \n",
+    "        # TODO\n",
+    "\n",
+    "\n",
+    "        print (\"Added a new answer and question to the cache: \" + answer.answer + \"in position\" + str(docIdCount))\n",
+    "        return answer"
    ]
   },
   {
