Removed model_name and replaced usage with deployment_name. model_name is not available as an ENV in ACA app deployment.

--- a/src-agents/phase3/notebook_p3.ipynb
+++ b/src-agents/phase3/notebook_p3.ipynb
@@ -48,8 +48,7 @@
     "    api_key = os.getenv(\"AZURE_OPENAI_API_KEY\"),\n",
     "    api_version = os.getenv(\"AZURE_OPENAI_VERSION\")\n",
     ")\n",
-    "deployment_name = os.getenv(\"AZURE_OPENAI_COMPLETION_DEPLOYMENT_NAME\")\n",
-    "model_name = os.getenv(\"AZURE_OPENAI_COMPLETION_MODEL\")"
+    "deployment_name = os.getenv(\"AZURE_OPENAI_COMPLETION_DEPLOYMENT_NAME\")"
    ]
   },
   {
@@ -287,7 +286,7 @@
     "            \n",
     "             # extend conversation with function response\n",
     "            second_response = client.chat.completions.create(\n",
-    "                model = model_name,\n",
+    "                model = deployment_name,\n",
     "                messages = messages)  # get a new response from the model where it can see the function response\n",
     "            \n",
     "            print(\"second_response\")\n",
